# niral_utilities

./: .gitignore  CMakeLists.txt  License.txt  ReadMe  ReadMe.md  niral_utilitiesConfig.cmake.in
CorrespondenceEvaluator/: CMakeLists.txt  itkCorrespondenceEvaluator.h  itkCorrespondenceEvaluator.txx  main.cpp
CropTools/: CMakeLists.txt  Crop4DImage.cxx  CropDTI.cxx  CropImage.cxx  argio.h
CurveCompare/: CMakeLists.txt  README
DMDBiomarkerTool/: CMakeLists.txt  DMDBase.h  DMDBioMarkerTool.cxx  DMDBioMarkerTool.h  DMDCalib.h  DMDCurveFit.h  DMDData.h  DMDIO.h  DMDMuscleFeature.h  DMDT2Fitting.h  polyfit  polyfit.c
DTIAtlasBuilder/: CMakeLists.txt  README
DTITensorNormalization/: CMakeLists.txt  CMakeLists.txt~
DWI_NiftiNrrdConversion/: CMakeLists.txt  DWI_NiftiNrrdConversion.cxx  DWI_NiftiNrrdConversion.xml  NiftiNrrdConversion.cxx
ImageMath/: CMakeLists.txt  Crop4DImage.cxx  ImageMath.cxx  ImageMath.h  ImageMathApp.cxx  ImageMomentsCalculator.cxx  ImageMomentsCalculator.h  MouseBrainOrient.cxx  MouseBrainOrient.h  argio.h
ImageMath/Testing/: CMakeLists.txt  itkTestMain.h
ImageMath/Testing/Data/: MultiOtsuBaseline.nrrd.md5  MultiOtsuInput.nrrd.md5
ImageStat/: CMakeLists.txt  ImageStat.cc  ImageStat.h  argio.h
Libraries/Algorithms/: CMakeLists.txt  ImageCaster.h  ImageCaster.txx  ImageCombinaison.h  ImageHistogram.cxx  ImageRotation.cxx  Rotation3D.h
MaurerDistanceTransform/: CMakeLists.txt  MaurerDistanceTransform.cxx  MaurerDistanceTransform.xml
MaurerDistanceTransform/Testing/: CMakeLists.txt
MultiAtlasSeg/: CMakeLists.txt  MultiAtlasSeg.cxx
PolyDataCompression/: CMakeLists.txt  PolyDataCompression.cxx  PolyDataCompression.xml
PolyDataCompression/Testing/: CMakeLists.txt  vtkTest.cxx  vtkTestMain.h
PolyDataCompression/Testing/Data/: BaselineCingulumNormalRun-compressed.vtk.md5  BaselineCingulumNormalRun-compressed.vtp.md5  CingulumNormalRun.vtk.md5  baseline.vtk.md5
PolydataMerge/: CMakeLists.txt  polydatamerge.cpp  polydatamerge.cxx  polydatamerge.xml
PolydataTransform/: CMakeLists.txt  polydatatransform.cpp  polydatatransform.cxx  polydatatransform.xml
TextureBiomarkerTool/: CMakeLists.txt  TextureBioMarkerTool.cxx  TextureBioMarkerTool.h  TextureData.h  TextureFeatureCal.h
TransformDeformationField/: CMakeLists.txt  TransformDeformationField.cpp  TransformDeformationField.xml  goodversionconcatenateandaverage.cpp  goodversionconcatenateandaverage.xml  itkDiffusionTensor3DAbsCorrection.h  itkDiffusionTensor3DAffineTransform.h  itkDiffusionTensor3DAffineTransform.txx  itkDiffusionTensor3DBSplineInterpolateImageFunction.h  itkDiffusionTensor3DBSplineInterpolateImageFunction.txx  itkDiffusionTensor3DExpImageFilter.h  itkDiffusionTensor3DExtended.h  itkDiffusionTensor3DExtended.txx  itkDiffusionTensor3DFSAffineTransform.h  itkDiffusionTensor3DFSAffineTransform.txx  itkDiffusionTensor3DInterpolateImageFunction.h  itkDiffusionTensor3DInterpolateImageFunction.txx  itkDiffusionTensor3DInterpolateImageFunctionReimplementation.h  itkDiffusionTensor3DInterpolateImageFunctionReimplementation.txx  itkDiffusionTensor3DLinearInterpolateFunction.h  itkDiffusionTensor3DLinearInterpolateFunction.txx  itkDiffusionTensor3DLogImageFilter.h  itkDiffusionTensor3DMatrix3x3Transform.h  itkDiffusionTensor3DMatrix3x3Transform.txx  itkDiffusionTensor3DNearestCorrection.h  itkDiffusionTensor3DNearestNeighborInterpolateFunction.h  itkDiffusionTensor3DNearestNeighborInterpolateFunction.txx  itkDiffusionTensor3DNonRigidTransform.h  itkDiffusionTensor3DNonRigidTransform.txx  itkDiffusionTensor3DPPDAffineTransform.h  itkDiffusionTensor3DPPDAffineTransform.txx  itkDiffusionTensor3DRead.h  itkDiffusionTensor3DRead.txx  itkDiffusionTensor3DResample.h  itkDiffusionTensor3DResample.txx  itkDiffusionTensor3DRigidTransform.h  itkDiffusionTensor3DRigidTransform.txx  itkDiffusionTensor3DTransform.h  itkDiffusionTensor3DTransform.txx  itkDiffusionTensor3DWindowedSincInterpolateImageFunction.h  (+6 more)
TransformDeformationField/dtiprocessFiles/: itkDeformationFieldToHFieldImageFilter.h  itkDeformationFieldToHFieldImageFilter.txx
Unsupported/: CMakeLists.txt
Unsupported/CorrespondenceEvaluator/: CMakeLists.txt  itkCorrespondenceEvaluator.txx  main.cpp
Unsupported/DMDBiomarkerTool/: CMakeLists.txt  DMDBioMarkerTool.cxx  DMDBioMarkerTool.h  DMDCurveFit.h  DMDData.h  DMDMuscleFeature.h
Unsupported/DTITensorNormalization/: DTITensorNormalization.cxx  argio.h
Unsupported/DWI_NiftiNrrdConversion/: CMakeLists.txt
Unsupported/IntensityRescaler/: Batch.ui  BatchControls.cxx  BatchControls.h  CMakeLists.txt  HistoGUI.ui  IntensityRescaler.cxx  IntensityRescalerCommandLine.cxx  IntensityRescalerCommandLine.h  IntensityRescalerGUI.ui  IntensityRescalerGUIControls.cxx  IntensityRescalerGUIControls.h
Unsupported/IntensityRescaler/CMake/: glutSetup.cmake  qtSetup.cmake
Unsupported/IntensityRescaler/Libraries/: CMakeLists.txt
Unsupported/IntensityRescaler/Libraries/Algorithms/: CMakeLists.txt  ImageCombinaison.cxx  ImageCombinaison.h  ImageHistogram.cxx  ImageHistogram.h  ImageIntensityNormalizer.cxx  ImageIntensityNormalizer.h  ImageRotation.cxx  ImageRotation.h  Rotation3D.cxx
Unsupported/IntensityRescaler/Libraries/Datatypes/: Vector2D.h  Vector3D.h  matMacro.h  minmax.h
Unsupported/IntensityRescaler/Libraries/Disclaimer/: CMakeLists.txt  Disclaimer.cxx  Disclaimer.h
Unsupported/IntensityRescaler/Libraries/Display/: CMakeLists.txt
Unsupported/IntensityRescaler/Libraries/IO/: CMakeLists.txt
Unsupported/TextureBiomarkerTool/: CMakeLists.txt  TextureBioMarkerTool.cxx  TextureBioMarkerTool.h  TextureData.h
Unsupported/TransformDeformationField/: CMakeLists.txt  TransformDeformationField.cxx  itkTransformDeformationFieldFilter.h  itkWarpTransform3D.h
Unsupported/TransformDeformationField/dtiprocessFiles/: itkHFieldToDeformationFieldImageFilter.h
Unsupported/convertITKformats/: CMakeLists.txt
convertITKformats/: CMakeLists.txt  argio.h  convertITKformats.cxx  convertITKformats4D.cxx  convertTextToImage.cxx  itkNiralDICOMSeriesFileNames.cxx  itkNiralDICOMSeriesFileNames.h
(+98 files in other folders)
