PROJECT(DMDBioMarkerTool)
#FIND_PATH(LAPACK_LIBRARY_DIR liblapack.a)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
  MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

FIND_PACKAGE(F2C REQUIRED)
IF(F2C_FOUND)
  INCLUDE(${F2C_USE_FILE})
ELSE(F2C_FOUND)
  MESSAGE(FATAL_ERROR "f2c.h not found. Please set f2c.h.")
ENDIF(F2C_FOUND)

FIND_PACKAGE(POLYFIT REQUIRED)
IF(POLYFIT_FOUND)
  INCLUDE(${POLYFIT_USE_FILE})
ELSE(F2C_FOUND)
  MESSAGE(FATAL_ERROR "polyfit not found. Please set polyfit.")
ENDIF(POLYFIT_FOUND)

ADD_EXECUTABLE(DMDBioMarkerTool DMDBioMarkerTool.cxx)
TARGET_LINK_LIBRARIES(DMDBioMarkerTool ${ITK_LIBRARIES} lapack) 

