cmake_minimum_required(VERSION 3.5)

project(NiftiNrrdConversion)

find_package(ITK COMPONENTS
  ITKCommon
  ITKIOImageBase
  ${ITK_IO_MODULES_USED}
)
if(ITK_FOUND)
  include(${ITK_USE_FILE})
else()
  message(FATAL_ERROR "ITK not found. Please set ITK_DIR")
endif()

find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})

set(LOCAL_NAME DWI_NiftiNrrdConversion)
set(LOCAL_LIBRARIES 
	${ITK_LIBRARIES}
	${VTK_LIBRARIES})

SEMMacroBuildCLI(
    NAME ${LOCAL_NAME}
    ${STATIC}
    TARGET_LIBRARIES ${LOCAL_LIBRARIES}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
    INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
    )
install( TARGETS ${LOCAL_NAME} RUNTIME DESTINATION bin )
